--- a/CP/Base.lproj/Main.storyboard
+++ b/CP/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -88,9 +88,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="camera-lens" width="128" height="128"/>
-        <image name="gear" width="128" height="128"/>
-        <image name="mask" width="128" height="128"/>
-        <image name="repeat" width="128" height="128"/>
+        <image name="camera-lens" width="64" height="64"/>
+        <image name="gear" width="64" height="64"/>
+        <image name="mask" width="64" height="64"/>
+        <image name="repeat" width="64" height="64"/>
     </resources>
 </document>
